<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="back">Back</string>
    <string name="height_bmi">Height(cm)</string>
    <string name="weight_bmi">Weight(kg)</string>
    <string name="calculate">Calculate</string>
</resources>
